tests/compile_fail/curry_zero_arguments.stderr
error: curry! requires a function with at least 2 arguments
 --> tests/compile_fail/curry_zero_arguments.rs:5:29
  |
5 |     let _ = lambars::curry!(|| 42);
  |                             ^
